chore(vscode): disable GitHub Actions extension to eliminate false positive YAML warnings [AGENT-001-A]
- Added github.vscode-github-actions to unwantedRecommendations
- Updated YAML validation settings
- Extension uninstalled (generates ~40 false positive 'Context access might be invalid' warnings)
- All workflow files validated with js-yaml: 10/10 valid
- Workflows run correctly on GitHub - no actual syntax errors

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,11 @@
 {
   "recommendations": [
-    "github.copilot"
+    "github.copilot",
+    "redhat.vscode-yaml"
   ],
   "unwantedRecommendations": [
     "ms-vscode.vscode-typescript-tslint-plugin",
-    "eg2.tslint"
+    "eg2.tslint",
+    "github.vscode-github-actions"
   ]
 }
