fix(review): Address PR #610 Codex review findings [AGENT-001-A]
Finding #2: Add logging to silent catch in superadmin stats fetch
- app/superadmin/issues/page.tsx: catch(_error) -> catch(error) with console.error

Finding #3: Add mock hygiene to SLA test files per .cursorrules
- tests/unit/lib/sla-business-hours.test.ts: Add beforeEach + vi.clearAllMocks()
- tests/unit/lib/sla.spec.ts: Add beforeEach + vi.clearAllMocks()
- tests/unit/lib/sla/business-hours.test.ts: Add beforeEach + vi.clearAllMocks()

CI: Add missing env vars to route-quality.yml
- Added MONGODB_URI, CRON_SECRET, VERCEL_CRON_SECRET for rtl-smoke job

UX: Wrap LoginPage in Suspense for Next.js 15+ compatibility
- app/(app)/login/page.tsx: Add Suspense boundary for useSearchParams()

Note: Finding #1 (error.tsx i18n) and #4 (BulkActionsToolbar i18n)
were already fixed on main.

--- a/.github/workflows/route-quality.yml
+++ b/.github/workflows/route-quality.yml
@@ -78,6 +78,9 @@ jobs:
           ALLOW_DASHBOARD_TEST_AUTH: "true"
           NEXTAUTH_SECRET: ${{ secrets.NEXTAUTH_SECRET }}
           AUTH_SECRET: ${{ secrets.AUTH_SECRET }}
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          CRON_SECRET: ${{ secrets.CRON_SECRET }}
+          VERCEL_CRON_SECRET: ${{ secrets.VERCEL_CRON_SECRET }}
         run: |
           npx playwright test \
             tests/smoke/rtl-layout.smoke.spec.ts \
