feat(assets): Improve form management and validation in AssetsPage [AGENT-001-A] (#611)
* feat(assets): Improve form management and validation in AssetsPage [AGENT-001-A]

Implements Issue #152 - Assets form improvements:

1. Form Library Integration:
   - Replaced manual useState with react-hook-form
   - Added zodResolver for validation
   - Reduced boilerplate code significantly
   - Better form state management

2. Client-Side Validation with Zod:
   - Created lib/validations/asset-schemas.ts with CreateAssetSchema & UpdateAssetSchema
   - Validates required fields (name, type, category)
   - Validates cost is positive number
   - Validates dates are valid and not in future
   - Validates serialNumber format (alphanumeric with hyphens/underscores)
   - Inline error messages next to fields
   - Prevents submission if validation fails

3. Better Error Handling:
   - Already uses toast notifications (sonner) - kept and improved
   - Parses JSON error responses from server
   - Shows specific field-level errors via Zod
   - Non-blocking error messages

4. Constants Extraction:
   - Created lib/constants/asset-constants.ts with:
     * ASSET_TYPES enum
     * ASSET_STATUSES enum
     * ASSET_CRITICALITY_LEVELS enum
     * Type labels with EN/AR translations
   - Imported in both forms and filters for consistency

5. Accessibility Improvements:
   - Added htmlFor/id associations on labels
   - Added aria-invalid and aria-describedby for errors
   - Added role='alert' on error messages

Tests:
- Added 26 unit tests for validation schemas

Closes #152

* fix(assets): address PR #611 review findings [AGENT-001-A]

HIGH: Make propertyId required in CreateAssetSchema (.min(1))
MEDIUM: Fix i18n regression - use auto() with tKey for all labels
MEDIUM: Add JSDoc to all exported constants and types
LOW: Fix warranty message 'positive' -> 'non-negative'
LOW: Use ASSET_TYPES constant in tests instead of hardcoded array
LOW: Use ASSET_DEFAULTS for coordinates and warranty period


--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -495,6 +495,26 @@
 			"label": "Stage All Changes",
 			"type": "shell",
 			"command": "git status -s; git add -A; git status -s"
+		},
+		{
+			"label": "List Conflicts",
+			"type": "shell",
+			"command": "git diff --name-only --diff-filter=U"
+		},
+		{
+			"label": "Check Conflicts",
+			"type": "shell",
+			"command": "git diff --check"
+		},
+		{
+			"label": "Verify No Conflicts",
+			"type": "shell",
+			"command": "git diff --check"
+		},
+		{
+			"label": "Commit Merge Resolution",
+			"type": "shell",
+			"command": "git add -A; git commit -m 'chore: Merge main and resolve conflicts [AGENT-001-A]'"
 		}
 	]
 }
