--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -546,6 +546,26 @@
 			"label": "Git Commit TEST-003",
 			"type": "shell",
 			"command": "git add -A; if ($?) { git commit -F commit-msg-temp.txt }; git status -s; git log --oneline -3"
+		},
+		{
+			"label": "Git Push",
+			"type": "shell",
+			"command": "git push origin HEAD"
+		},
+		{
+			"label": "Git Preflight",
+			"type": "shell",
+			"command": "git fetch origin; git status -s; Write-Host '---'; git log --oneline -5; Write-Host '---'; git branch --show-current"
+		},
+		{
+			"label": "Typecheck Verify",
+			"type": "shell",
+			"command": "pnpm typecheck"
+		},
+		{
+			"label": "Lint Verify",
+			"type": "shell",
+			"command": "pnpm lint"
 		}
 	]
 }
