fix: comprehensive code quality fixes [AGENT-001-A]
Tasks.json:
- Remove duplicate Git Preflight task (lines 556-558)
- Fix PowerShell-only Git Commit TEST-003 with cross-platform syntax

API Routes:
- route-metrics: Update JSDoc to SUPER_ADMIN only (matches implementation)
- jobs/process GET: Add rate-limiting + superadmin session check
- impersonate/sessions: Change 401 to 403 (consistency)
- notifications/send: Queue instead of immediate send, add input validation

UI Components:
- users/page: Split bulkStatus into separate states for single/bulk dialogs
- users/page: Fix delete dialog text (reflect soft-delete, not permanent)
- BrandLogo: Remove inline height:'auto' styles (let Tailwind control)

Tests:
- journals-action: Add 403 tests for missing FINANCE:POST/VOID permissions
- journals-action: Fix createRequest helper to accept explicit endpoint
- owner-statement: Add RBAC permission enforcement test

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -543,19 +543,16 @@
 			"detail": "Stage all, commit (opens editor for message), and push"
 		},
 		{
-			"label": "Git Commit TEST-003",
+			"label": "Git Commit & Status",
 			"type": "shell",
-			"command": "git add -A; if ($?) { git commit -F commit-msg-temp.txt }; git status -s; git log --oneline -3"
+			"command": "git add -A && git commit && git status -s && git log --oneline -3",
+			"problemMatcher": [],
+			"detail": "Stage all, commit (opens editor for message), show status"
 		},
 		{
 			"label": "Git Push",
 			"type": "shell",
 			"command": "git push origin HEAD"
-		},
-		{
-			"label": "Git Preflight",
-			"type": "shell",
-			"command": "git fetch origin; git status -s; Write-Host '---'; git log --oneline -5; Write-Host '---'; git branch --show-current"
 		},
 		{
 			"label": "Typecheck Verify",
