chore: Fix lint issues and minor improvements [AGENT-001-A]
- Fix CRLF line endings across multiple files
- Minor improvements to API routes and services
- Update .gitignore
- Remove temp commit-msg file

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,5 @@ ai-memory/outputs/*.json
 docs/analysis/comment-analysis.json
 docs/analysis/system-errors-detailed.json
 .cursor/
+
+commit-msg-temp.txt
