fix: TypeScript fixes, lint fixes, and service improvements [AGENT-001-A]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,6 +80,9 @@
   // Git performance
   "git.untrackedChanges": "hidden",
   "git.ignoreLimitWarning": true,
+  
+  // Prevent direct commits/pushes to protected branches in VS Code
+  "git.branchProtection": ["main", "master"],
 
   // Editor performance
   "editor.codeLens": false,
