feat(building3d): Add 3D building model generator and viewer
## Summary
Adds a complete 3D building model visualization system for properties.
Property owners/agents can generate 3D building models, edit unit metadata,
and publish for tenants to view in an interactive 3D tour.

## Features
- Procedural 3D building generation (floors, apartments, rooms)
- AI-powered generation placeholder (premium tier, future)
- Interactive Three.js 3D viewer with orbit and top-down views
- Unit metadata management (meters, bedrooms, bathrooms, area)
- DRAFT  PUBLISHED workflow for building models
- Tenant 3D tour page at /fm/properties/[id]/tour
- Multi-tenant isolation via orgId

## Files Added
- server/models/BuildingModel.ts - MongoDB schema for 3D models
- lib/buildingModel.ts - Zod schemas, procedural generator
- app/api/fm/properties/[id]/building-model/route.ts - Generate/fetch API
- app/api/fm/properties/[id]/building-model/publish/route.ts - Publish API
- app/api/fm/properties/[id]/units/[unitId]/route.ts - Unit CRUD API
- components/building3d/BuildingViewer.tsx - Three.js 3D viewer
- components/building3d/BuildingTourClient.tsx - Tenant tour component
- components/fm/properties/BuildingModelTab.tsx - Owner/agent tab UI
- app/(fm)/properties/[id]/tour/page.tsx - Tenant tour page

## Dependencies
- three, @react-three/fiber, @react-three/drei

## RBAC
- PROPERTY:UPDATE required for generate/publish
- Allowed roles: SUPER_ADMIN, CORPORATE_ADMIN, PROPERTY_OWNER, AGENT, MANAGEMENT
- Tenants can view published models only

--- a/package.json
+++ b/package.json
@@ -230,6 +230,9 @@
     "express-validator": "^7.3.0",
     "firebase-admin": "^13.6.0",
     "framer-motion": "^11.18.2",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "three": "^0.175.0",
     "helmet": "^7.2.0",
     "html2canvas": "^1.4.1",
     "ical.js": "^2.2.1",
@@ -306,6 +309,7 @@
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@types/supertest": "^6.0.3",
+    "@types/three": "^0.175.0",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.23",
     "chalk": "^4.1.2",
