fix(a11y): Add aria-labels to 100+ buttons - HR, work-orders, marketplace, finance [AGENT-001-A]
ACCESSIBILITY BATCH 2 - Target 18% -> 40% coverage

HR MODULE (26 buttons, was 0%):
- app/(fm)/fm/hr/leave/page.tsx - Refresh, Launch window, Retry, Review plan
- app/(fm)/fm/hr/payroll/page.tsx - Upload, Start run, Retry, Open run book
- app/(fm)/fm/hr/payroll/run/page.tsx - Upload, Compliance, Save draft, Submit
- app/(fm)/fm/hr/leave/approvals/page.tsx - Playbook, Assign, Retry, Decline, Approve
- app/(fm)/fm/hr/directory/page.tsx - Add Employee, Retry, View Details
- app/(fm)/fm/hr/recruitment/page.tsx - Post job

WORK-ORDERS MODULE (47 buttons, was 6%):
- app/(fm)/fm/work-orders/board/page.tsx - Filter, New Work Order
- app/(fm)/fm/work-orders/approvals/page.tsx - Rules, Bulk Approve, Approve/Reject/Review per item, View All
- app/(fm)/fm/work-orders/new/page.tsx - Create Work Order

MARKETPLACE MODULE (29 buttons, was 7%):
- 10 files updated with 27 buttons
- error.tsx, page.tsx, product/[slug], buyer/claims, seller/onboarding
- seller-central/advertising, analytics, kyc, pricing
- vendor/products/upload

FINANCE COMPONENTS (37 buttons, was 8%):
- TrialBalanceReport.tsx - Export, Refresh, Expand/Collapse, Load
- AccountActivityViewer.tsx - Export, Refresh, date presets, pagination
- InvoicesList.tsx - Create Invoice, Filters, pagination
- JournalEntryForm.tsx - Quick Balance, Clear, Add/Remove Line, Cancel, Submit
- BalanceSheetWidget.tsx, IncomeStatementWidget.tsx, OwnerStatementWidget.tsx - Refresh
- ExpenseReceiptsUploader.tsx - Remove Receipt

VERIFICATION:
- pnpm typecheck: 0 errors
- pnpm lint: 0 errors (2 pre-existing warnings)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,8 @@
 {
   "recommendations": [
     "github.copilot",
-    "redhat.vscode-yaml"
+    "redhat.vscode-yaml",
+    "google.geminicodeassist"
   ],
   "unwantedRecommendations": [
     "ms-vscode.vscode-typescript-tslint-plugin",
