--- a/package.json
+++ b/package.json
@@ -204,11 +204,14 @@
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@sendgrid/mail": "^8.1.6",
     "@sentry/nextjs": "^10.32.1",
     "@smithy/smithy-client": "^4.10.2",
     "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-table": "^8.21.3",
+    "@types/three": "^0.182.0",
     "@types/xml-crypto": "^1.4.6",
     "@vercel/functions": "^3.3.3",
     "@vercel/speed-insights": "^1.3.1",
@@ -271,6 +274,7 @@
     "swr": "^2.3.8",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.182.0",
     "unified": "^11.0.5",
     "xml-crypto": "^6.1.2",
     "xmlbuilder2": "^4.0.3",
