--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
   
   // Agent instruction files (explicit paths)
   "github.copilot.chat.codeGeneration.instructionFiles": [
-    "AGENTS.md",
+    "docs/AGENTS.md",
     ".github/copilot-instructions.md",
     ".github/instructions/*.instructions.md"
   ],
