--- a/package.json
+++ b/package.json
@@ -363,7 +363,7 @@
     }
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm audit --prod --audit-level=high && pnpm lint:prod && pnpm lint:inventory-org && pnpm guard:fm-hooks && bash scripts/security/check-hardcoded-uris.sh",
+    "pre-commit": "bash scripts/git-hooks/pre-commit.sh",
     "pre-push": "pnpm lint:mongo-unwrap && pnpm typecheck"
   }
 }
