feat(devops): auto-start dev server + terminal protection protocol [AGENT-0002]
- tasks.json: Dev server auto-starts on folder open (runOn: folderOpen)
- tasks.json: Added 'Dev: Restart Server' task for recovery
- tasks.json: Enforce single instance with instanceLimit: 1

AGENTS.md Section 5.8 Updates:
- Added 5.8.0 Dev Server Protection (NON-NEGOTIABLE)
- Updated cleanup commands to protect port 3000
- Dev server terminal is SACRED - agents must NEVER kill it

Instruction Files Updated:
- .github/copilot-instructions.md
- .github/instructions/00-agents-md-required.instructions.md

All agents MUST verify dev server is alive at session start.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -70,8 +70,39 @@
 			"command": "pnpm dev",
 			"group": "none",
 			"isBackground": true,
+			"runOptions": {
+				"runOn": "folderOpen",
+				"instanceLimit": 1
+			},
+			"presentation": {
+				"reveal": "always",
+				"panel": "dedicated",
+				"group": "dev-server",
+				"close": false,
+				"focus": false
+			},
 			"problemMatcher": [],
-			"detail": "Start Next.js development server"
+			"detail": "Start Next.js development server - AUTO-STARTS on folder open"
+		},
+		{
+			"label": "Dev: Restart Server",
+			"type": "shell",
+			"command": "taskkill /F /IM node.exe /FI \"WINDOWTITLE eq *pnpm dev*\" 2>nul; pnpm dev",
+			"windows": {
+				"command": "taskkill /F /IM node.exe /FI \"WINDOWTITLE eq *pnpm dev*\" 2>nul; Start-Sleep -Seconds 2; pnpm dev"
+			},
+			"group": "none",
+			"isBackground": true,
+			"runOptions": {
+				"instanceLimit": 1
+			},
+			"presentation": {
+				"reveal": "always",
+				"panel": "dedicated",
+				"group": "dev-server"
+			},
+			"problemMatcher": [],
+			"detail": "Kill existing dev server and restart"
 		},
 		{
 			"label": "TypeCheck",
