--- a/.github/workflows/agent-governor.yml
+++ b/.github/workflows/agent-governor.yml
@@ -100,6 +100,7 @@ jobs:
 
       - name: Build project
         env:
+          NODE_OPTIONS: '--max-old-space-size=8192'
           MONGODB_URI: ${{ secrets['MONGODB_URI'] }}
           NEXTAUTH_SECRET: ${{ secrets['NEXTAUTH_SECRET'] }}
           NEXTAUTH_URL: "http://localhost:3000"
