--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -121,6 +121,15 @@ jobs:
           fi
         continue-on-error: true
 
+      - name: Cache Next.js build
+        uses: actions/cache@v4
+        with:
+          path: .next/cache
+          key: nextjs-build-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}-${{ hashFiles('**/*.ts', '**/*.tsx', '!node_modules/**') }}
+          restore-keys: |
+            nextjs-build-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}-
+            nextjs-build-${{ runner.os }}-
+
       - name: Build Next.js
         run: |
           export MONGODB_URI="${MONGODB_URI:-mongodb://localhost:27017/fixzit}"
