--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -230,46 +230,15 @@ jobs:
 
           exit ${status:-0}
 
-      # ---------- Build Web (Next.js) ----------
-      - name: Build Web (Next.js)
+      # ---------- Build Web (Next.js) - SKIPPED ----------
+      # Build step removed - Vercel handles production builds
+      # This workflow now only validates code quality (lint, typecheck, unit tests)
+      # See: https://github.com/EngSayh/Fixzit/pull/656 [AGENT-0008]
+      - name: Build Web (Next.js) - SKIPPED
         shell: bash
         run: |
-          build_dir=""
-          if [ -f apps/web/package.json ]; then
-            build_dir="apps/web"
-          elif [ -f package.json ]; then
-            build_dir="."
-          fi
-
-          if [ -z "$build_dir" ]; then
-            echo "No Next.js project detected; skipping build."
-            exit 0
-          fi
-
-          pushd "$build_dir" > /dev/null
-          case "${{ steps.pm.outputs.manager }}" in
-            pnpm)
-              NODE_OPTIONS="--max-old-space-size=8192" pnpm build
-              ;;
-            yarn)
-              NODE_OPTIONS="--max-old-space-size=8192" yarn build
-              ;;
-            *)
-              NODE_OPTIONS="--max-old-space-size=8192" npm run build
-              ;;
-          esac
-
-          # Attempt a static export only when scripts exist
-          if node -e "const pkg=require('./package.json');process.exit(pkg?.scripts?.export?0:1)"; then
-            case "${{ steps.pm.outputs.manager }}" in
-              pnpm) pnpm run export ;;
-              yarn) yarn run export ;;
-              *) npm run export ;;
-            esac
-          else
-            echo "No export script found. Skipping static export."
-          fi
-          popd > /dev/null
+          echo "::notice::Build step skipped - Vercel handles production builds"
+          echo "✅ Vercel is the build system for this project"
 
       # ---------- OpenAPI (generate or validate) ----------
       - name: Build/Validate OpenAPI
@@ -675,15 +644,13 @@ jobs:
         if: steps.playwright-cache.outputs.cache-hit == 'true'
         run: pnpm exec playwright install-deps
 
-      - name: Build app
-        env:
-          NODE_ENV: test
-          SKIP_ENV_VALIDATION: 'true'
-          # AUDIT-2025-11-30: Build with ALLOW_OFFLINE_MONGODB: 'false'
-          # Next.js embeds env values at build time. Building with 'true'
-          # bakes offline paths into the bundle, defeating test-runtime 'false'.
-          ALLOW_OFFLINE_MONGODB: 'false'
-        run: pnpm build
+      # Build step REMOVED - Vercel handles production builds
+      # RBAC E2E tests are skipped until Vercel preview URL integration
+      # See: https://github.com/EngSayh/Fixzit/pull/656 [AGENT-0008]
+      - name: Build app - SKIPPED
+        run: |
+          echo "::notice::Build step skipped - Vercel handles production builds"
+          echo "RBAC E2E tests require running against Vercel preview deployment"
 
       - name: Run RBAC E2E Tests
         if: github.event_name != 'pull_request' || (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork != true)
