--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -104,8 +104,10 @@ jobs:
             --coverage.provider=v8 --coverage.reporter=text-summary \
             --coverage.reporter=lcov --maxWorkers=1
 
-      - name: Build
-        run: pnpm build
+      # Build step REMOVED - Vercel handles production builds
+      # See: https://github.com/EngSayh/Fixzit/pull/656 [AGENT-0008]
+      - name: Build - SKIPPED
+        run: echo "::notice::Build step skipped - Vercel handles production builds"
 
       - name: Upload QA Artifacts
         if: always()
