ci(actionlint): Remove disabled jobs to fix if:false errors [AGENT-0008]
Removed rtl-smoke jobs entirely instead of using if:false (actionlint rejects static false conditions).
Also removed disabled Upload Build Artifacts step from webpack.yml.

Files: route-quality.yml, i18n-validation.yml, webpack.yml

--- a/.github/workflows/route-quality.yml
+++ b/.github/workflows/route-quality.yml
@@ -54,13 +54,7 @@ jobs:
       - name: Check translation coverage
         run: pnpm run i18n:coverage
 
-  # RTL smoke tests SKIPPED - require running app build
+  # RTL smoke tests REMOVED - require running app build
   # Vercel handles production builds; these tests should run against Vercel preview
   # See: https://github.com/EngSayh/Fixzit/pull/656 [AGENT-0008]
-  rtl-smoke:
-    needs: route-quality
-    runs-on: ubuntu-latest
-    if: false  # Disabled - requires build output that Vercel provides
-    steps:
-      - name: Notice
-        run: echo "RTL smoke tests disabled - run against Vercel preview instead"
+  # Job removed to fix actionlint error (if: false not allowed)
