--- a/.github/workflows/i18n-validation.yml
+++ b/.github/workflows/i18n-validation.yml
@@ -212,14 +212,8 @@ jobs:
           path: parity-report.json
           retention-days: 30
 
-  # RTL smoke tests SKIPPED - require running app build
+  # RTL smoke tests REMOVED - require running app build
   # Vercel handles production builds; these tests should run against Vercel preview
   # See: https://github.com/EngSayh/Fixzit/pull/656 [AGENT-0008]
-  rtl-smoke:
-    needs: validate-translations
-    runs-on: ubuntu-latest
-    if: false  # Disabled - requires build output that Vercel provides
-    steps:
-      - name: Notice
-        run: echo "RTL smoke tests disabled - run against Vercel preview instead"
+  # Job removed to fix actionlint error (if: false not allowed)
 
