--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -142,15 +142,8 @@ jobs:
           echo "::notice::Bundle budget check skipped - requires build output"
           echo "Bundle analysis should be done via Vercel build logs"
 
-      - name: Upload Build Artifacts - SKIPPED
-        if: false  # Skipped since no build output
-        uses: actions/upload-artifact@v4
-        with:
-          name: nextjs-build-${{ matrix.node-version }}
-          path: |
-            .next
-            !.next/cache
-          retention-days: 1
+      # Upload Build Artifacts step REMOVED - no build output to upload
+      # See: https://github.com/EngSayh/Fixzit/pull/656 [AGENT-0008]
 
       - name: Upload Coverage Reports
         if: always()
