--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,18 +2,14 @@
 # yamllint disable rule:line-length rule:truthy
 name: E2E Tests (Playwright)
 
+# E2E tests DISABLED for pull_request - Vercel handles builds
+# Run manually via workflow_dispatch or after merge via push event
+# See: https://github.com/EngSayh/Fixzit/pull/656 [AGENT-0008]
 on:
-  pull_request:
-    branches: [main, develop]
-    paths:
-      - 'app/**'
-      - 'components/**'
-      - 'lib/**'
-      - 'tests/**'
-      - 'playwright.config.ts'
-      - 'tests/playwright.config.ts'
-      - 'package.json'
-      - 'pnpm-lock.yaml'
+  # Disabled: pull_request triggers removed since Vercel builds the app
+  # E2E tests should run against Vercel preview deployment
+  # pull_request:
+  #   branches: [main, develop]
   workflow_dispatch:
     inputs:
       project:
